Fix header spacings

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,10 +1,12 @@
 .site-navbar {
-    @apply container mx-auto p-4 my-4 flex items-center justify-between h-16;
+    @apply w-full lg:container mx-auto p-4 my-4 flex items-center justify-between h-16;
 
     .logo-container {
         @apply flex items-center text-primary text-lg font-semibold;
 
-        .logo {}
+        .logo {
+            @apply max-w-[80px] md:max-w-[120px];
+        }
     }
 
     .menu {
